force-app/main/default/objects/ackAPS__e.object
<CustomObject>
    <fields>
        <fullName>applicantid__c</fullName>
        <label>applicantId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applicationSource__c</fullName>
        <label>applicationSource</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applicationStagingid__c</fullName>
        <label>applicationStagingId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>errorsJSON__c</fullName>
        <label>errorsJSON</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eventType__c</fullName>
        <label>eventType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>objectType__c</fullName>
        <label>objectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smsApplicationNumber__c</fullName>
        <label>smsApplicationNumber</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smsApplicationid__c</fullName>
        <label>smsApplicationId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smsLastModified__c</fullName>
        <label>smsLastModified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>smsPersonid__c</fullName>
        <label>smsPersonId</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>studyApplicationJSON__c</fullName>
        <description>The entire JSON description of the a banner application, acp and related records.</description>
        <label>studyApplication</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>studyApplicationid__c</fullName>
        <label>studyApplicationId</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>templateCode__c</fullName>
        <label>templateCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>transferStatus__c</fullName>
        <label>transferStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inbound APS ack</label>
    <pluralLabel>Inbound APS acks</pluralLabel>
</CustomObject>